Normalize filepath
Signed-off-by: Alexandra Bucur <alexandra-nona.bucur@ing.com>