@@ -190,6 +190,6 @@ public class SynchronizationTest extends AnalyticsModelingTestBase
 	{
 		String root = Paths.get(".").toAbsolutePath().normalize().toString();
 		String input  =  root + folder + fileName + ".json";
-        return OBJECT_READER.readValue(new String(Files.readAllBytes(Paths.get(input)), Charset.defaultCharset()), cls);
+        return OBJECT_READER.readValue(Files.readString(Paths.get(input).normalize(), Charset.defaultCharset()), cls);
 	}
 }
